@@ -1,3 +1,12 @@
+2011-08-25 Randazzo Marco <marco.randazzo@iit.it>
+    * CMakeLists.txt: iCub now requires YARP 2.3.11
+    * main/src/core/iCubInterface/ControlBoardWrapper2.cpp
+    * main/src/core/iCubInterface/ControlBoardWrapper2.h
+    * main/src/tools/robotMotorGui/src/*
+    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
+    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
+	added new method yarp::dev::IImpedanceControl::getCurrentImpedanceLimit()
+
 2011-08-32 Lorenzo Natale <lorenzo.natale@iit.it>
     * tagging 1.1.6
 	
